# PDFMerger

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini  wsgi.py
.github/workflows/: main.yml
api/: app.py  index.py
api/static/: script.js  style.css
api/templates/: base.html  index.html
pdfmerger/: main.py
tests/: test_merger.py
webapp/: app.py  util.py
webapp/static/: script.js  style.css
webapp/templates/: index.html
